# vim: set noexpandtab:

2013-07-06 Matt
	* Added met weights for the jets x,y components.

2013-07-05 Matt
	* Changed how bTagSF is called, see header.
	* Added configure method for bTagSF tool
	* Updated initialization of DilTrigTool to be compatibile with latest DGTrigger package
	
2013-07-02 Matt
	* Adding sumet to all met terms except refCell and softJet since these are no longer used.
	* Fixed missing copy constructor for softTerm in SusyNt.cxx
	
2013-06-26 Steve
	* Addd isSemiSignalElectron and isSemiSignalMuon from Tina
	* Updated 3L isolation corrections to only subtract semi-signal leptons
	* Tagging SusyNtuple-00-01-03

2013-06-26 Steve
	* Added event trigger cut to TrilTrigLogic
	* Added getHT and getThrT methods to SusyNtTools
	* Made isSelectTau and performOverlap virtual for overriding in matrix method
	* Tagging SusyNtuple-00-01-02

2013-06-24 Steve
	* Turned on m_selectTaus by default

2013-06-22 Matt
	* Changed passDeadRegions Pt threshold 30-->40 following 2Lep update.

2013-06-21 Steve
	* Fixed position of tau overlap removal
		* Slight mistake introduced on 2013-06-10 commit below

2013-06-20 Davide
	* Add the counters to correct for events with the SUSY propagator bug
	* Tagging SusyNtuple-00-01-01

2013-06-19 Steve
	* Tagging SusyNtuple-00-01-00

2013-06-18 Steve
	* Updates for p1512 D3PDs
		* Had to update VarHandle
		* Had to add D3PDReadStats, D3PDPerfStats, Utils.
		  Got weird errors otherwise

2013-06-18 Steve
	* Tagging SusyNtuple-00-00-60

2013-06-18 Matt
	* Moved to cutting on ptcone30ElStyle for muons for 2 lep analysis.
	* Updated btag sf and the bTagSF method

2013-06-17 Steve
	* Object selection updates for 3L
		* Both 2L/3L now using unbiased IP
		* Signal jets now require jvf>0.5 only for jets with pt<50 and |detEta|<2.4
			* Still keeping pt>20 and |eta|<2.5 otherwise
	* Cleaned up isSignal ele and mu methods
	* Added new D3PDTag enum value D3PD_p1512

2013-06-10 Steve
	* Corrected overlap removal with taus (thanks Estel)